1. Get rid of docker compose, so that can run on non compose environments. 2. Fixes and cleanup for model indexes`

--- a/frame-server/config.example
+++ b/frame-server/config.example
@@ -35,8 +35,8 @@ const config = {
             uri: {
                 $filter: 'env',
                 production: process.env.MONGODB_URI,
-                test: 'mongodb://mongo:27017/frame-test',
-                $default: 'mongodb://mongo:27017/frame'
+                test: 'mongodb://mongo-byocat:/frame-test-byocat',
+                $default: 'mongodb://mongo-byocat:/frame-byocat'
             }
         },
         autoIndex: true
