get back mongo install during build, syntactic fix

--- a/frame-server/config.example
+++ b/frame-server/config.example
@@ -14,7 +14,7 @@ const criteria = {
 const config = {
     $meta: 'This file configures the plot device.',
     projectName: '{{projectName}}',
-    emailUrl: '{{emailUrl}}'
+    emailUrl: '{{emailUrl}}',
     port: {
         web: {
             $filter: 'env',
