--- a/frame-server/package.json
+++ b/frame-server/package.json
@@ -28,6 +28,7 @@
     "hapi": "15.x.x",
     "hapi-auth-basic": "4.x.x",
     "hapi-auth-cookie": "6.x.x",
+    "hapi-l10n-gettext": "0.0.8",
     "hapi-mongo-models": "6.x.x",
     "hoek": "4.x.x",
     "inert": "4.x.x",
@@ -53,6 +54,12 @@
     "promptly": "2.x.x",
     "proxyquire": "1.x.x",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "grunt": "^1.0.2",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ejslint": "^1.0.0",
+    "lodash": "^4.17.5"
   }
 }
