--- a/frame-server/package.json
+++ b/frame-server/package.json
@@ -4,11 +4,10 @@
   "description": "A user system API starter",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon  --inspect -e js,md,css,ejs,json server.js",
     "first-time-setup": "node first-time-setup.js",
     "test": "lab -c -L",
-    "setup": "./setup.js",
-    "docs": "documentation build server/helperMethods.js server/mailer.js -f md > docs/helperMethodsDocumentation.md mailerDocumentation.md"
+    "setup": "./setup.js"
   },
   "author": "Reza Akhavan <jedireza@gmail.com> (http://reza.akhavan.me/)",
   "license": "MIT",
@@ -20,25 +19,24 @@
     "bcryptjs": "~2.0.2",
     "boom": "4.x.x",
     "confidence": "3.x.x",
-    "documentation": "^4.0.0-rc.0",
     "dotenv": "2.x.x",
+    "glue": "4.2.x",
     "ejs": "2.x.x",
-    "glue": "4.x.x",
     "handlebars": "4.x.x",
-    "hapi": "15.x.x",
     "hapi-auth-basic": "4.x.x",
-    "hapi-auth-cookie": "6.x.x",
     "hapi-mongo-models": "6.x.x",
     "hoek": "4.x.x",
     "inert": "4.x.x",
-    "jade": "1.x.x",
+    "winston": "2.3.1",
+    "winston-daily-rotate-file": "1.4.6",
+    "pug": "2.x.x",
     "joi": "9.x.x",
     "joi-password-complexity": "1.x.x",
     "lout": "9.x.x",
     "mongo-models": "1.x.x",
     "mongodb": "2.x.x",
-    "node-uuid": "1.4.7",
-    "nodemailer": "2.x.x",
+    "uuid": "3.x.x",
+    "nodemailer": "4.x.x",
     "nodemailer-markdown": "1.x.x",
     "object-assign": "4.x.x",
     "slug": "0.9.x",
@@ -46,12 +44,12 @@
     "visionary": "6.x.x"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "code": "3.x.x",
     "lab": "11.x.x",
+    "mocha": "5.x.x",
     "nodemon": "1.x.x",
     "promptly": "2.x.x",
-    "proxyquire": "1.x.x",
-    "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "proxyquire": "1.x.x"
   }
 }
