Added support for localized questions, responses, demographics. Added getLocaleResource method to helperMethods.js to extract localized string or array from a JSON object. For backwards compatibility the method recognizes if the object property hasn't been localized, i.e. it's a string or an array. Modified code to call getLocaleResource when reading json file objects from the profile folder including demographic questions, survey questions, section descriptions and home page text. Added section to README.md for Localization. Created unit tests for getLocaleResource method.

--- a/frame-server/package.json
+++ b/frame-server/package.json
@@ -33,6 +33,7 @@
     "pug": "2.x.x",
     "joi": "9.x.x",
     "joi-password-complexity": "1.x.x",
+    "locale": "^0.1.0",
     "lout": "9.x.x",
     "mongo-models": "1.x.x",
     "mongodb": "2.x.x",
