--- a/frame-server/package.json
+++ b/frame-server/package.json
@@ -24,6 +24,7 @@
     "ejs": "2.x.x",
     "handlebars": "4.x.x",
     "hapi-auth-basic": "4.x.x",
+    "hapi-auth-cookie": "6.x.x",
     "hapi-mongo-models": "6.x.x",
     "hoek": "4.x.x",
     "inert": "4.x.x",
