--- a/frame-server/config.example
+++ b/frame-server/config.example
@@ -15,6 +15,8 @@ const config = {
     $meta: 'This file configures the plot device.',
     projectName: '{{projectName}}',
     appUrl: '{{appUrl}}',
+    appLogoPath: '{{appLogoPath}}',
+    appIconPath: '{{appIconPath}}',
     port: {
         web: {
             $filter: 'env',
